<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/topHotels"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/topstar" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favourite" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/About"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>
