<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:baselineAligned="false"
        android:fontFamily="@font/nabilla"
        android:gravity="center"
        android:text="@string/hajozat"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtslogan1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/indie_flower"
            android:gravity="center"
            android:lineSpacingExtra="12dp"
            android:paddingTop="32dp"
            android:text="@string/slogan1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/button_singup1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shap_singup"
            android:text="@string/singup"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/button_singin1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shap_singn"
            android:text="@string/singin"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>