<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".sing_up">

    <TextView
        android:id="@+id/text_singup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indie_flower"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text="@string/singup"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iamgeview_back1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:src="@drawable/backward" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_singup"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_name_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/white"
                android:hint="@string/name"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_password_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_number_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:backgroundTint="@android:color/white"
                            android:hint="@string/number"
                            android:inputType="number"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_singup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:background="@drawable/btn_shap_singup"
        android:text="@string/singup"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>