<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_singin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:ignore="InvalidId">

    <TextView
        android:id="@+id/text_singin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indie_flower"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text="@string/singin"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iamgeview_back2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:src="@drawable/backward" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_singin"
        android:orientation="vertical"
        android:paddingTop="98dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:backgroundTint="@android:color/white"
                android:hint="@string/email"
                android:inputType="text"
                android:text="gigi@gmail.com"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="12345"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_singin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:background="@drawable/btn_shap_singn"
        android:text="@string/singin"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />
</RelativeLayout>